@@ -1,3 +1,8 @@
+2008-06-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/36508
+	* gcc.dg/pr36508.c: New test.
+
 2008-06-18  Joseph Myers  <joseph@codesourcery.com>
 
 	* lib/target-supports.exp
